fixed overflow settings on smaller display

--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,9 @@ body {
 
 main {
     background: var(--background-color);
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    height: 100%;
+    max-height: 700px;
     width: 503px;
     max-width: 100%;
     margin: auto;
@@ -32,10 +33,16 @@ main {
     display: flex;
     flex-direction: column;
     color: var(--primary-color);
-    overflow: hidden auto;
+    overflow-y: auto;
     box-sizing: border-box;
     font-size: 14px;
     font-family: "Montserrat", Arial, Helvetica, sans-serif
+}
+
+section {
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 footer {
